
* SOLR-17391: Fixed performance regression of misconfigured threadpools from SOLR-16879 (Solr 9.4).
  Shard splits and concurrent/large collection backup/restore performance was serial.  UpdateLog
  replay was a little suboptimal in thread usage too.  (Pierre Salagnac, Hakan Özler, David Smiley)

Dependency Upgrades
---------------------
(No changes)
* SOLR-17325: Upgrade Lucene to 9.11.1 (hossman)

Other Changes
---------------------
* SOLR-17248: Refactor ZK related SolrCli tools to separate SolrZkClient and CloudSolrClient instantiation/usage (Lamine Idjeraoui via Eric Pugh)

* SOLR-16505: Use Jetty HTTP2 for index replication and other "recovery" operations
  (Sanjay Dutt, David Smiley)

* GITHUB#2454: Refactor preparePutOrPost method in HttpJdkSolrClient (Andy Webb)

* SOLR-16503: Use Jetty HTTP2 for SyncStrategy and PeerSyncWithLeader for "recovery" operations (Sanjay Dutt, David Smiley)

* SOLR-16796: Include cyclonedx SBOMs with maven artifacts (Arnout Engelen, Houston Putman, Kevin Risden)

* PR#2524: QueryResult refactoring so that it's only returned from SolrIndexSearcher instead of
  being provided to it.  Deprecated APIs in 9x; should be removed later. (David Smiley)

* SOLR-17347: EnvUtils: Removed "env" methods, as they were problematic.  Code should almost never
  refer to env vars.  (David Smiley)

* SOLR-15831: Refactor bin/solr and bin/solr.cmd commands integration with AuthTool, DeleteTool, and PackageTool to delegate arg parsing to Java code.  Removed limitation of PackageTool only being executed on an active Solr node.  (Eric Pugh)

* SOLR-17322: Once again allow rank queries to use custom TopDocsCollectors that operate on types that extend
  ScoreDocs (covariant generic types) broken in Solr 9.0. (Stephen Woods via Christine Poerschke)

* SOLR-16996: Update Solr Exporter for Prometheus cli to use commons-cli instead of argparse4j.  (Christos Malliaridis via Eric Pugh)

>>>>>>> origin/branch_9x

==================  9.6.1 ==================